<resources>
    <string name="app_name">OverGarage</string>
    <string name="foto_login">Foto Login</string>
    <string name="hint_nombre_usuario">Nombre Usuario</string>
    <string name="hint_email">Correo Electronico</string>
    <string name="hint_pw">Contraseña</string>
    <string name="hint_pw2">Confirmar contraseña</string>
    <string name="hint_dir">Direccion</string>
    <string name="hint_desc">Descripcion</string>
    <string name="btn_registro">Registrarse</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="hint_taller">Taller</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="btn_regis">Registrarse</string>
    <string name="explora">Explora</string>
    <string name="foto_foros">Imagen de los foros</string>
    <string name="textoForo">Motor</string>
    <string name="txt_desc_foro">Corta descripción del grupo de foros</string>
    <string name="img_foro">Imagen de un foro</string>
    <string name="img_tarjeta">imagen_tarjeta</string>
    <string name="title">Título</string>
    <string name="subforos">%1$s Subforos</string>
    <string name="desc_tarjeta">Descripción</string>
    <string name="title_mec">Mecánica</string>
    <string name="subforos_mec">%1$s Subforos</string>
    <string name="desc_mec">Todo lo relacionado con la mecánica</string>
    <string name="img_tarjeta_mec">imgMecanica</string>
    <string name="img_tarjeta_Electronica">ImagenElectronica</string>
    <string name="title_electronic">Electronica</string>
    <string name="error_lectura">No se ha podido leer el dato</string>
    <string name="no_data">Debe introducir todos los datos</string>
    <string name="msj_no_accede">No se ha podido acceder</string>
    <string name="msj_pw_iguales">Las contraseñas introducidas no coinciden</string>
    <string name="msj_registrado">Usuario registrado</string>
    <string name="msj_no_registrado">No se ha podido registrar el usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_about">Sobre nosotros</string>
    <string name="ayuda">Ayuda</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="txt_notificaciones">Notificaciones</string>
    <string name="f_ayuda">Ayuda</string>
    <string name="help">Términos de uso</string>
    <string name="politica">Política de privacidad</string>
    <string name="seguridad">Consejos de seguridad OverGarage</string>
    <string name="frecuentes">Preguntas frecuentes</string>
    <string name="normas">Normas de OverGarage</string>
    <string name="twitter">OverGarage en Twitter</string>
    <string name="version">Versión app:</string>
    <string name="version_n">2.7</string>
    <string name="pablo">Pablo</string>
    <string name="carlos">Carlos</string>
    <string name="raul">Raúl</string>
    <string name="content_about_us">Somos Carlos García, Pablo López,  y Raúl García, estudiantes de
        la Universidad Europea en el campus de Alcobendas. Hemos desarrollado esta aplicación como
        proyecto de fin de ciclo, para el ciclo formativo de Desarrollo de Aplicaciones Multiplataforma,
        en el curso de 2019/2021. Ha sido una experiencia genial y estamos muy contentos con los
        resultados obtenidos en la aplicación, tanto a nivel funcional como de diseño.
        Pensamos que con algún retoque podría ser una aplicación muy útil.
        Agradecer a los profesores Félix De Pablo, Ernesto Ramiro y Pilar Martín la formación
        y ayuda prestada para que este proyecto haya sido posible.</string>
    <string name="descripcion">Descripción</string>
    <string name="crear_post">CREAR POST</string>
    <string name="et_titulo">Titulo</string>
    <string name="et_desc_post">Descripcion del problema</string>
    <string name="et_modelo">Modelo del coche</string>
    <string name="et_responde">Escribe tu respuesta</string>
    <string name="warn_no_response">Debe introducir una respuesta</string>
    <string name="btn_responder">RESPONDER</string>
</resources>