<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp208"
    android:layout_marginTop="@dimen/dp8"
    android:layout_marginHorizontal="@dimen/dp8"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="@dimen/dp40"
    app:cardCornerRadius="@dimen/dp4"
    android:checkable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp96"
            android:contentDescription="@string/img_tarjeta"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sp16"
                android:layout_marginRight="@dimen/sp16"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp24" />

                <TextView
                    android:id="@+id/subforos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/subforos"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/RojoAcento"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp8"
                android:layout_marginBottom="4dp"
                android:text="@string/desc_tarjeta"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>